Fixed Gray_box padding and wrapping by Salam. v.02

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,9 @@ html, body{
 	position: relative;
 	top: 5%;
 	left: 25%;
-	width: 55%;
+  right: 25%;
+	width: 50%;
+  bottom: 5%;
 	height: auto;
   padding-top:  0%;
   padding-left: 2%;
